--- a/content/Hello work(w3).html
+++ b/content/Hello work(w3).html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello(w3).html'>Hello(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,15 +149,14 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Work << <a href='Work.html'>Previous</a> <a href='圖片上傳(w4).html'>Next</a> >> 圖片上傳(w4)<br /><h1>Hello(w3)</h1>
+    <div id="tipue_search_content">Work << <a href='Work.html'>Previous</a> <a href='圖片上傳(w4).html'>Next</a> >> 圖片上傳(w4)<br /><h1>Hello work(w3)</h1>
 <h4>原始碼 :</h4>
 <pre class="brush:dart;auto-links:false;toolbar:false" contenteditable="false">void main() {
     print("Pikachu!皮卡!");
   }</pre>
 <p><span>###</span><a href="https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27">https://dartpad.dev?id=5b59e62ad166b984e377718f7efeaf27</a></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=5b59e62ad166b984e377718f7efeaf27" width="800"></iframe></p>
-<p></p>
-<br />Work << <a href='Work.html'>Previous</a> <a href='圖片上傳(w4).html'>Next</a> >> 圖片上傳(w4)</div>
+<p></p><br />Work << <a href='Work.html'>Previous</a> <a href='圖片上傳(w4).html'>Next</a> >> 圖片上傳(w4)</div>
         
     <!-- footer -->
       <div class="container">
