--- a/content/Pikachu.html
+++ b/content/Pikachu.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello(w3).html'>Hello(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -151,7 +151,7 @@ init_mathjax();
         </header>
     <div id="tipue_search_content"> <a href='Work.html'>Next</a> >> Work<br /><h1>Pikachu</h1>
 <p>2019 Fall 計算機程式課程網頁:<a href="http://mde.tw/cp2019/content/index.html">http://mde.tw/cp2019</a> </p>
-<p>機械設計便覽(乙級):<a href="./../downloads/Computer-Aided Design and Drafting.pdf">Computer-Aided Design and Drafting.pdf</a> </p>
+<p>40823210的倉儲:<a href="https://github.com/40823210/cp2019">https://github.com/40823210/cp2019</a></p>
 <p><img alt="" height="526" src="./../images/Pikachu2.PNG" width="532"/></p>
 <br /> <a href='Work.html'>Next</a> >> Work</div>
         
