--- a/content/Work.html
+++ b/content/Work.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello(w3).html'>Hello(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello(w3).html'>Next</a> >> Hello(w3)<br /><h1>Work</h1>
-<br />Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello(w3).html'>Next</a> >> Hello(w3)</div>
+    <div id="tipue_search_content">Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello work(w3).html'>Next</a> >> Hello work(w3)<br /><h1>Work</h1>
+<br />Pikachu << <a href='Pikachu.html'>Previous</a> <a href='Hello work(w3).html'>Next</a> >> Hello work(w3)</div>
         
     <!-- footer -->
       <div class="container">
