--- a/content/圖片上傳(w4).html
+++ b/content/圖片上傳(w4).html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello(w3).html'>Hello(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
+                     <li><a href='Pikachu.html'>Pikachu</a><li class='has-children'><a href='Work.html'>Work</a><ul class='dropdown'><li><a href='Hello work(w3).html'>Hello work(w3)</a><li><a href='圖片上傳(w4).html'>圖片上傳(w4)</a><li><a href='For迴圈(w6).html'>For迴圈(w6)</a><li><a href='For迴圈與函式(w7).html'>For迴圈與函式(w7)</a><li><a href='嵌入 Dartpad(w8).html'>嵌入 Dartpad(w8)</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,13 +149,13 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Hello(w3) << <a href='Hello(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)<br /><h1>圖片上傳(w4)</h1>
+    <div id="tipue_search_content">Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)<br /><h1>圖片上傳(w4)</h1>
 <h5>圖片上傳-image files upload</h5>
 <p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
 <h5><span>皮卡丘-Pikachu</span></h5>
 <p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
 <p></p>
-<br />Hello(w3) << <a href='Hello(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)</div>
+<br />Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)</div>
         
     <!-- footer -->
       <div class="container">
