--- a/content/建立分組倉儲(w10).html
+++ b/content/建立分組倉儲(w10).html
@@ -156,8 +156,7 @@ init_mathjax();
 <h5>CP2019bg5倉儲:<a href="https://github.com/s40523111/cp2019bg5">https://github.com/s40523111/cp2019bg5</a></h5>
 <p></p>
 <h5>CP2019bg5網頁:<a href="https://s40523111.github.io/cp2019bg5/content/index.html">https://s40523111.github.io/cp2019bg5/content/index.html</a></h5>
-<p></p>
-<br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)</div>
+<p></p><br />課程筆記 << <a href='課程筆記.html'>Previous</a> <a href='華氏與攝氏(w11).html'>Next</a> >> 華氏與攝氏(w11)</div>
         
     <!-- footer -->
       <div class="container">
