--- a/content/w14.html
+++ b/content/w14.html
@@ -149,13 +149,12 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)<br /><h1>圖片上傳(w4)</h1>
-<h5>圖片上傳-image files upload</h5>
-<p><span><img caption="false" height="373" src="./../images/Capture02.PNG" width="803"/></span></p>
-<h5><span>皮卡丘-Pikachu</span></h5>
-<p><img alt="" height="876" src="./../images/Capture01.PNG" width="803"/></p>
-<p></p>
-<br />Hello work(w3) << <a href='Hello work(w3).html'>Previous</a> <a href='For迴圈(w6).html'>Next</a> >> For迴圈(w6)</div>
+    <div id="tipue_search_content">數列(w12) << <a href='數列(w12).html'>Previous</a> <br /><h1>w14</h1>
+<p>國旗</p>
+<p><canvas height="200" id="canvas" width="300"></canvas></p>
+<script src="./../downloads/dart_ex/roc_flag/roc_flag.js"></script>
+<p>溫度轉換 請輸入轉換溫度:<br/>(數字加上 C or F)<br/><br/><input id="temp" max="30" min="1" type="text" value="20F"/> <input id="submit" type="button" value="換算"/><br/> <br/>轉換結果:<br/><br/><label id="output"></label></p>
+<script src="./../downloads/dart_ex/Temp2/temp2.js"></script><br />數列(w12) << <a href='數列(w12).html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
