--- a/content/華氏與攝氏(w11).html
+++ b/content/華氏與攝氏(w11).html
@@ -190,7 +190,8 @@ document.getElementById("iframe").height = 600 ;
 }
 </script>
 <p></p>
-<p></p><br />建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> <a href='數列(w12).html'>Next</a> >> 數列(w12)</div>
+<p></p>
+<br />建立分組倉儲(w10) << <a href='建立分組倉儲(w10).html'>Previous</a> <a href='數列(w12).html'>Next</a> >> 數列(w12)</div>
         
     <!-- footer -->
       <div class="container">
